Fixing img stretching on sections.

--- a/src/AboutPage/AboutPage.scss
+++ b/src/AboutPage/AboutPage.scss
@@ -25,6 +25,10 @@
 
             padding-left: 40px;
 
+            @media screen and (max-width: 767px) {
+                padding-left: 0;
+            }
+
             .about-header {
                 font-size: 2.5rem;
                 
@@ -46,7 +50,7 @@
                 }
 
                 @media screen and (max-width: 767px) {
-                    width: 60vw;
+                    width: 80vw;
                 }
             }
 
