--- a/src/ProjectPages/Components/Section/Section.scss
+++ b/src/ProjectPages/Components/Section/Section.scss
@@ -77,7 +77,7 @@ $bodyPadding: 70px;
     justify-content: space-around;
     
     img {
-      width: 40%;
+      width: 30vw;
       height: auto;
       margin: 30px 10px 30px 10px;
       border-radius: 10px;
@@ -94,8 +94,12 @@ $bodyPadding: 70px;
     }
 
     .img-sm {
-      width: 60%;
+      width: 50vw;
       height: auto;
+
+      @media screen and (max-width: 767px) {
+        width: 80vw;
+      }
     }
   }
 }
